Worked on alignment issue

--- a/web/src/shared/components/ArticleSection/style.scss
+++ b/web/src/shared/components/ArticleSection/style.scss
@@ -62,13 +62,13 @@
     }
     .grid-container{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         grid-gap: 16px;
         @media(max-width: 980px) {
 			grid-template-columns: repeat(3, minmax(42%, 1fr));
 		}
 		@media(min-width: 992px) and (max-width: 1280px) {
-			grid-template-columns: repeat(3, minmax(27%, 1fr));
+			grid-template-columns: repeat(5, minmax(19%, 1fr));
 		}
 		@media (max-width: 768px) {
             grid-template-columns: repeat(3, minmax(31%, 1fr));
